Resolves: tdf#128359 Do nothing if Insert After can't be shifted to Before

Change-Id: I63bf24cda4d14857f9b5cf63a95d35b6438cead1
Reviewed-on: https://gerrit.libreoffice.org/81518
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 9b5adc3d9842303e00eba8ffd239a4015bf8355b)
Reviewed-on: https://gerrit.libreoffice.org/81549
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>