sc/source/ui/docshell/docfunc.cxx
@@ -1692,7 +1692,7 @@ bool ScDocFunc::InsertCells( const ScRange& rRange, const ScMarkData* pTabMark, 
         ScRange aErrorRange( ScAddress::UNINITIALIZED );
         if (!aTargetRange.Move(0, rRange.aEnd.Row() - rRange.aStart.Row() + 1, 0, aErrorRange))
         {
-            assert(!"can't move");
+            return false;
         }
     }
     if ( eCmd == INS_INSCOLS_AFTER )
@@ -1700,7 +1700,7 @@ bool ScDocFunc::InsertCells( const ScRange& rRange, const ScMarkData* pTabMark, 
         ScRange aErrorRange( ScAddress::UNINITIALIZED );
         if (!aTargetRange.Move(rRange.aEnd.Col() - rRange.aStart.Col() + 1, 0, 0, aErrorRange))
         {
-            assert(!"can't move");
+            return false;
         }
     }
 
